update applied probability

--- a/Notebooks/Applied_Probability.ipynb
+++ b/Notebooks/Applied_Probability.ipynb
@@ -6,9 +6,10 @@
    "source": [
     "# Learning Objectives\n",
     "\n",
-    "- At the end of this class, you will be able to write down functions to compute probability and conditional probability \n",
+    "By the end of this class, you will be able to...\n",
     "\n",
-    "- How can use Bayes formula to compute conditional probability "
+    "- Write functions to compute probability and conditional probability \n",
+    "- Use Bayes formula to compute conditional probability "
    ]
   },
   {
@@ -90,7 +91,7 @@
     "\n",
     "<br>\n",
     "\n",
-    "Any kind of distribution of values where our data can take one of multiple, separately-occurring states indicates that we can think about the probability of each state (event) occurring on its own! "
+    "Any kind of distribution of values where our data can take one of multiple, separately-occurring **states** indicates that we can think about the probability of each state (event) occurring on its own! "
    ]
   },
   {
@@ -99,9 +100,9 @@
    "source": [
     "## Conditional Probability\n",
     "\n",
-    "- We want to have better guess when we have some additional observations for an (random) event\n",
+    "- We want to have a better guess when we have some additional observations for a random event\n",
     "\n",
-    "- What is the probability that someone be hired by Google, knowing that he/she has Master Degree?"
+    "- For example, what is the probability that someone will be hired by Google, knowing that they have a Master Degree?"
    ]
   },
   {
@@ -175,22 +176,77 @@
    "source": [
     "## Activity (Titanic):\n",
     "\n",
-    "- Given that some passengers paid over $100 for their ticket, what is the chance they survived?\n",
-    "    - Try, two approches: P(survived = 1 | Fare > 100) directly\n",
-    "    - Another way: Use Bayesian -> P(survived = 1 and Fare > 100)/ P(Fare > 100)\n",
-    "- Given that a passenger is under 30 but over 20 years old, what are the chances they are in first class?\n",
-    "- Given that a female passenger was unmarried, what are the chances that she survived?\n",
+    "### Given that some passengers paid over $100 for their ticket, what is the chance they survived?\n",
+    "    \n",
+    "There are two ways we can approach this problem.\n",
     "\n",
-    "- Given that a male passenger over 30 years did not survive, what are the odds that he paid less than $25 for a ticket?\n",
+    "1. Calculate it directly: $P(survived = 1 | Fare > 100)$\n",
+    "1. Use **Bayes' Theorem**. Bayes' Theorem describes the probability of an event, based on prior knowledge of conditions that might be related to the event. It can be calculated using this formula:\n",
     "\n",
-    "- What is the probability that a survived passenger was man?\n",
+    "$ P( A \\mid B ) = \\frac{P( B \\mid A ) * P( A )}{P( B )} $\n",
     "\n",
-    "    - P(passenger = 'man' | Survived = '1')"
+    "We know how to calculate $ P( B \\mid A ) $, so we can deduce the following:\n",
+    "\n",
+    "$ P( A \\mid B ) = \\frac{P( B \\mid A ) * P( A )}{P( B )} = \\frac{\\frac{P( A \\cap B )}{P ( A )} * P( A )}{P( B )} = \\frac{P( A \\cap B )}{P( B )} = \\frac{P(survived = 1 and Fare > 100)}{P(Fare > 100)} $"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Direct Solution:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: 39, 0: 14}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dict(df[df['Fare'] > 100]['Survived'].value_counts())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7358490566037735"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "39 / (39 + 14)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Bayes' Theorem Solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -204,11 +260,12 @@
    "source": [
     "# Solution:\n",
     "import pandas as pd\n",
-    "df = pd.read_csv('../Pandas/titanic.csv')\n",
+    "df = pd.read_csv('Datasets/titanic.csv')\n",
     "\n",
-    "\n",
-    "P_Numerator = len(df[(df['Survived'] == 1) &  (df['Fare'] >= 100)])/len(df)\n",
-    "P_Denominator = len(df[df['Fare'] >= 100])/len(df)\n",
+    "# P(survived = 1 and Fare > 100)\n",
+    "P_Numerator = len(df[(df['Survived'] == 1) &  (df['Fare'] > 100)])/len(df)\n",
+    "# P(Fare > 100)\n",
+    "P_Denominator = len(df[df['Fare'] > 100])/len(df)\n",
     "\n",
     "print(P_Numerator/P_Denominator)"
    ]
@@ -217,56 +274,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Second Solution:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{1: 39, 0: 14}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dict(df[df['Fare'] >= 100]['Survived'].value_counts())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.7358490566037735"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "39 / (39 + 14)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### What is the probability that a survived passenger was man?\n",
     "\n",
-    "     - P(passenger = 'man' | Survived = '1')"
+    "$P(passenger = man \\mid Survived = 1)$"
    ]
   },
   {
@@ -313,6 +323,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Other challenges\n",
+    "\n",
+    "- Given that a passenger is under 30 but over 20 years old, what are the chances they are in first class?\n",
+    "- Given that a female passenger was unmarried, what are the chances that she survived?\n",
+    "- Given that a male passenger over 30 years did not survive, what are the odds that he paid less than $25 for a ticket?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Tennis Dataset\n",
     "\n",
     "- This dataset contains how professional tennis players decide to play outdoor tennis based on climate conditions"
@@ -320,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -486,7 +507,7 @@
        "14      Rain  Mild     High  Strong       No"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,7 +515,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv('tennis.txt', delimiter=\"\\t\", header=None, names=['Outlook', 'Temp', 'Humidity', 'Wind', 'Decision'])\n",
+    "df = pd.read_csv('Datasets/tennis.txt', delimiter=\"\\t\", header=None, names=['Outlook', 'Temp', 'Humidity', 'Wind', 'Decision'])\n",
     "df"
    ]
   },
@@ -507,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -539,7 +560,7 @@
        "Name: Decision, dtype: object"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,7 +651,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
