add pdf and cdf

--- a/Notebooks/PDF_CDF_Normal.ipynb
+++ b/Notebooks/PDF_CDF_Normal.ipynb
@@ -1,8 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Learning Objectives\n",
+    "\n",
+    "- At the end of this class, you will be able to write down functions to compute probability density function and cumulative density function \n",
+    "\n",
+    "- How can use `scipy.stats` package to compute Survaival Value or CDF Value for a known distribution"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
