update pdf cdf normal

--- a/Notebooks/PDF_CDF_Normal.ipynb
+++ b/Notebooks/PDF_CDF_Normal.ipynb
@@ -6,21 +6,23 @@
    "source": [
     "# Learning Objectives\n",
     "\n",
-    "- At the end of this class, you will be able to write down functions to compute probability density function and cumulative density function \n",
+    "At the end of this class, you will be able to...\n",
     "\n",
-    "- How can use `scipy.stats` package to compute Survaival Value or CDF Value for a known distribution"
+    "- Compute probability density functions and cumulative density functions\n",
+    "\n",
+    "- Use the `scipy.stats` package to compute the Survaival Value or CDF Value for a known distribution"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np \n",
     "import pandas as pd \n",
     "\n",
-    "df = pd.read_csv('../Pandas/titanic.csv')"
+    "df = pd.read_csv('./Datasets/titanic.csv')"
    ]
   },
   {
@@ -29,9 +31,11 @@
    "source": [
     "## Probability Distribution Function (PDF)\n",
     "\n",
-    "- PDF has exactly similar pattern to histogram. The only difference is we normalize the value of histogram\n",
+    "- PDFs have a similar pattern to histogram. The only difference is that we _normalize the value of histograms_\n",
     "\n",
-    "- Lets plot the histogram for Age in Titanic"
+    "- Let's plot the histogram for Age in our Titanic dataset\n",
+    "\n",
+    "- To visaulize this data, we'll use the [seaborn](https://seaborn.pydata.org/) library"
    ]
   },
   {
@@ -69,7 +73,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Lets now plot the PDF of Age in Titanic"
+    "- Now let's  plot the PDF of Age in Titanic"
    ]
   },
   {
@@ -107,7 +111,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Activity: In PDF, where does the y axes numbers come from? For example at Age 20, why the y-value is around 0.030?"
+    "## Activity: In PDFs, where does the y axes numbers come from?\n",
+    "\n",
+    "For example, at Age 20, why is the y-value around 0.030?"
    ]
   },
   {
@@ -216,7 +222,10 @@
     }
    ],
    "source": [
+    "# Find the number of passengers younger than 40\n",
     "How_many_younger_40 = df[df['Age'] <= 40]\n",
+    "# Find the percentage of passengers who are younger than 40\n",
+    "# Do this by dividing the number of passengers younger than 40 by the total number of passengers (with an age)\n",
     "pr_below_40 = len(How_many_younger_40)/len(df['Age'].dropna())\n",
     "pr_below_40"
    ]
@@ -225,7 +234,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## It is not easy to calculate this percentage from PDF as we should compute the area"
+    "## It is not easy to calculate this percentage from PDFs as we should compute the area"
    ]
   },
   {
@@ -234,31 +243,41 @@
    "source": [
     "## Cumulative Density Function (CDF)\n",
     "\n",
-    "- In above example, we could not easily obtain the percentage from PDF, although it is possible.\n",
+    "- In above example, we could not easily obtain the percentage from a PDF, although it is possible.\n",
     "\n",
-    "- With CDF we can\n",
+    "- This is much easier if we use a CDF. A CDF calculates the probability that a random variable is less than a threshold value\n",
     "\n",
-    "- Lets learn CDF by example. CDF computation needs two steps:\n",
+    "- Let's learn CDF by example: CDF computation requires three steps:\n",
     "\n",
-    "    1 - For a given array of numbers and a given threshold,  Count how many elements in the array is less than the threshold\n",
-    "    \n",
-    "    2 - Change the threshold from the minimum to maximum value of the array\n",
+    "    1. Set the threshold to be the minimum value of the array\n",
+    "    1. For a given array of numbers and a given threshold, sum all of the elements in the array that are less than the threshold\n",
+    "    1. Repeat step two, increasing the threshold by one, until you calculate the CDF for threshold = max(array)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.0, 0.0196078431372549, 0.03361344537815126, 0.04201680672268908, 0.056022408963585436, 0.06162464985994398, 0.06582633053221289, 0.0700280112044818, 0.07563025210084033, 0.08683473389355742, 0.0896358543417367, 0.09523809523809523, 0.09663865546218488, 0.09943977591036414, 0.10784313725490197, 0.11624649859943978, 0.1400560224089636, 0.15826330532212884, 0.19467787114845939, 0.22969187675070027, 0.2507002801120448, 0.2857142857142857, 0.3235294117647059, 0.3445378151260504, 0.38795518207282914, 0.4215686274509804, 0.44677871148459386, 0.47198879551820727, 0.5070028011204482, 0.5378151260504201, 0.572829131652661, 0.5994397759103641, 0.6246498599439776, 0.6484593837535014, 0.6694677871148459, 0.696078431372549, 0.726890756302521, 0.7366946778711485, 0.7521008403361344, 0.7717086834733894, 0.7899159663865546, 0.8011204481792717, 0.819327731092437, 0.8263305322128851, 0.8389355742296919, 0.8557422969187675, 0.8627450980392157, 0.8753501400560224, 0.8879551820728291, 0.896358543417367, 0.9103641456582633, 0.9201680672268907, 0.9285714285714286, 0.9299719887955182, 0.9411764705882353, 0.9439775910364145, 0.9509803921568627, 0.9537815126050421, 0.9607843137254902, 0.9635854341736695, 0.969187675070028, 0.9733893557422969, 0.9789915966386554, 0.9817927170868347, 0.9845938375350141, 0.988795518207283, 0.9901960784313726, 0.9901960784313726, 0.9901960784313726, 0.9901960784313726, 0.9929971988795518, 0.9971988795518207, 0.9971988795518207, 0.9971988795518207, 0.9985994397759104, 0.9985994397759104, 0.9985994397759104, 0.9985994397759104, 0.9985994397759104, 0.9985994397759104]\n"
+     ]
+    }
+   ],
    "source": [
     "ls_age = df['Age'].dropna().values\n",
     "\n",
     "def calculate_cdf(x, threshold):\n",
     "    return np.sum(x <= threshold)\n",
     "\n",
+    "# Create an array cdf_age where each value is the cdf of the age for each threshold\n",
+    "cdf_age = [calculate_cdf(ls_age, r)/len(ls_age) for r in range(int(np.min(ls_age)), int(np.max(ls_age)))]\n",
     "\n",
-    "cdf_age = [calculate_cdf(ls_age, r)/len(ls_age) for r in range(int(np.min(ls_age)), int(np.max(ls_age)))]"
+    "print(cdf_age)"
    ]
   },
   {
@@ -297,7 +316,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## More about PDF"
+    "## More about PDFs\n",
+    "\n",
+    "Below we show a Violin plot. Per [Wikipedia](https://en.wikipedia.org/wiki/Violin_plot), a violin plot is a method of plotting numeric data. It is similar to a box plot, with the addition of a rotated kernel density plot on each side.\n",
+    "\n",
+    "Violin plots are similar to box plots, except that they also show the **probability density (what a PDF shows!)** of the data at different values, usually smoothed by a kernel density estimator. "
    ]
   },
   {
@@ -336,9 +359,9 @@
    "source": [
     "## Normal Distribution\n",
     "\n",
-    "- It is possible that when we plot histogram or PDF of an array, it has Bell Shape \n",
+    "- It is possible that when we plot a histogram or PDF of an array, it has a Bell Shape \n",
     "\n",
-    "- The name of this histogram is Normal"
+    "- The name of this histogram is **Normal**"
    ]
   },
   {
@@ -382,7 +405,9 @@
    "source": [
     "## Activity: \n",
     "\n",
-    "- The intrsuctor of DS, graded students final exam. He is reporting that the mean was 60 (with scale of 100) with standard deviation of 10. What is the probability that students got more than 70?"
+    "- The intrsuctor of DS graded last term's final exam. They are reporting that the mean was 60 (with scale of 100) with standard deviation of 10. \n",
+    "\n",
+    "_What is the probability that students got more than 70?_"
    ]
   },
   {
@@ -444,7 +469,7 @@
    "source": [
     "## Activity:\n",
     "\n",
-    "- Show that about 68% of the values in a are in [50, 70] range\n"
+    "- Show that about 68% of the values are in the [50, 70] range\n"
    ]
   },
   {
@@ -471,7 +496,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## If we scale the Normal Ditribution, the result is zero mean and unit std "
+    "## If we scale the Normal Distribution, the result is zero mean and unit std \n",
+    "\n",
+    "**Unit std** means you are converting your data from its original units to units of standard deviation"
    ]
   },
   {
@@ -511,11 +538,11 @@
    "source": [
     "## Z-Distribution \n",
     "\n",
-    "- When the samples of our numerical array are Normal with arbitrary mean and std\n",
+    "- Z-distribution is another name for _standard Normal distribution_\n",
     "\n",
-    "- If scale each element by subtracting elements from the mean and divide over std, then the new array would be a Normal distribution with zero mean, std 1 \n",
+    "- When the samples of our numerical array are Normal with an arbitrary mean and std\n",
     "\n",
-    "- Z-distribution is another name for standard Normal distribution"
+    "- If scale each element by subtracting elements from the mean, and divide over the std, then the new array would be a Normal distribution with zero mean, and std 1 "
    ]
   },
   {
@@ -542,7 +569,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
