comments and update CDF definition

--- a/Notebooks/PDF_CDF_Normal.ipynb
+++ b/Notebooks/PDF_CDF_Normal.ipynb
@@ -35,7 +35,7 @@
     "\n",
     "- Let's plot the histogram for Age in our Titanic dataset\n",
     "\n",
-    "- To visaulize this data, we'll use the [seaborn](https://seaborn.pydata.org/) library"
+    "- To visualize this data, we'll use the [seaborn](https://seaborn.pydata.org/) library"
    ]
   },
   {
@@ -133,16 +133,20 @@
    ],
    "source": [
     "# custom histogram function\n",
-    "def custom_hist(ls, interval):\n",
+    "# ls = input list\n",
+    "# num_interval = number of intervals\n",
+    "def custom_hist(ls, num_interval):\n",
     "    hist_ls_dict = dict()\n",
+    "    # minimum value in ls\n",
     "    min_ls = np.min(ls)\n",
+    "    # maximum value in ls\n",
     "    max_ls = np.max(ls)\n",
     "    print(max_ls)\n",
-    "    I = ((max_ls - min_ls) / interval)\n",
+    "    # I = Interval\n",
+    "    I = ((max_ls - min_ls) / num_interval)\n",
     "    print(I)\n",
-    "    for j in range(interval):\n",
-    "#         print((min_ls + j*I, min_ls + (j+1) *I))\n",
-    "#         print(np.sum(((min_ls + j*I) <=ls) & (ls <= (min_ls + (j+1) *I))))\n",
+    "    for j in range(num_interval):\n",
+    "        # Create how many elements in ls are at each interval j\n",
     "        hist_ls_dict[(min_ls + j*I, min_ls + (j+1) *I)]= np.sum(((min_ls + j*I) <=ls) & (ls <= (min_ls + (j+1) *I)))      \n",
     "    return hist_ls_dict\n",
     "        \n",
@@ -247,11 +251,12 @@
     "\n",
     "- This is much easier if we use a CDF. A CDF calculates the probability that a random variable is less than a threshold value\n",
     "\n",
-    "- Let's learn CDF by example: CDF computation requires three steps:\n",
+    "- Let's learn CDF by example: given an array of numbers (our random variable) and a threshold value as input:\n",
     "\n",
+    "    1. Find the minimum value in the array\n",
     "    1. Set the threshold to be the minimum value of the array\n",
-    "    1. For a given array of numbers and a given threshold, sum all of the elements in the array that are less than the threshold\n",
-    "    1. Repeat step two, increasing the threshold by one, until you calculate the CDF for threshold = max(array)\n",
+    "    1. For a given array of numbers and a given threshold, count all of the elements in the array that are less than the threshold, and divide that count by the length of the array\n",
+    "    1. Repeat step three, increasing the threshold by one, until you go through step three where threshold is equail to the maximum value in the array\n",
     "\n"
    ]
   },
