modify null hypothesis

--- a/Notebooks/HypothesisTesting.ipynb
+++ b/Notebooks/HypothesisTesting.ipynb
@@ -2,11 +2,24 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
+   "metadata": {},
+   "source": [
+    "## Learning Objectives\n",
+    "\n",
+    "By the end of this lesson, students will be able to:\n",
+    "\n",
+    "1- Describe null hypothesis and when and how apply Null Hypothesis\n",
+    "\n",
+    "2- What are the metrics we need in order to statistically accept or reject null\n",
+    "\n",
+    "3- How and when use Z test or T test\n",
+    "\n",
+    "4- Whether or not two groups are different"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## What is null hypothesis?\n",
     "\n",
@@ -24,7 +37,7 @@
     "## Null hypothesis examples\n",
     "\n",
     "\n",
-    "1- Raindance, cultures people dance together to have rain during periods of drought <img src=\"Images/raindance.jpg\">\n",
+    "1- Raindance, cultures people dance together to have rain during periods of drought <img src=\"raindance.jpg\">\n",
     "\n",
     "2- We want to test a drug has impact on brain \n",
     "\n",
@@ -41,51 +54,23 @@
     }
    },
    "source": [
-    "## Learning Objectives\n",
-    "\n",
-    "By the end of this lesson, students will be able to:\n",
-    "\n",
-    "1- Describe null hypothesis and when and how apply Null Hypothesis\n",
-    "\n",
-    "2- What are the metrics we need in order to statistically accept or reject null\n",
-    "\n",
-    "3- How and when use Z test or T test\n",
-    "\n",
-    "4- Whether or not two samples are different\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
     "## Review of Z distribution, CDF and SF\n",
     "\n",
     "Activity: Generate 10000 sample as a random variable with Normal distribution with pre-define mean and standard deviation.\n",
     "\n",
-    "Hint = from scipy.stats import norm \n",
+    "Hint = `import numpy as np`\n",
     "\n",
-    "       norm.rvs(loc= , scale= , size=10000)\n",
+    "        `mean  = 60`\n",
+    "        \n",
+    "        `sigma = 10`\n",
     "\n",
-    "Write a code to show that $Z = \\frac{X - \\mu}{\\sigma}$, is standard Normal\n",
+    "       X = np.random.normal(mean, sigma, 10000)\n",
+    "\n",
+    "Write a code to show that $Z = \\frac{X - mean}{sigma}$, is standard Normal\n",
+    "\n",
+    "Hint: If subtract each element of above generated number from the mean and divide over std (sigma), then the new array would be a Normal distribution with zero mean, std 1 \n",
     "\n",
     "Hint: Plot histogram of Z, show Z is standard normal"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "## Do the questions in worksheet\n",
-    "\n",
-    "Have 5 minutes to do it"
    ]
   },
   {
@@ -130,11 +115,11 @@
     "\n",
     "3- Define a significant level, $\\alpha$\n",
     "\n",
-    "4- If $N$ > 30, calculate z-score, $z-score = \\frac{\\bar{x} - \\mu}{\\sigma/\\sqrt{N}}$\n",
+    "4- If $N$ > 30 or $\\sigma$ is known, then calculate z_score, $z_{score} = \\frac{\\bar{x} - \\mu}{\\sigma/\\sqrt{N}}$\n",
     "\n",
-    "5- Calculate p-value, $p-value = 2SF(Z-score)$\n",
+    "5- Calculate p-value, $p_{value} = 2SF(z_{score})$\n",
     "\n",
-    "6- Decision: if $p-value < \\alpha$ then reject the null hypothesis "
+    "6- Decision: if $p_{value} < \\alpha$ then reject the null hypothesis "
    ]
   },
   {
@@ -156,17 +141,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-2-bd856d4b1bfc>, line 6)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-bd856d4b1bfc>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    z = (sample_mean - mu) / sample_std\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "def accept_or_reject_null_hypothesis(mu, sample_mean, significant_level, N):\n",
+    "def accept_or_reject_null_hypothesis(mu, sample_mean, significant_level, N, sigma):\n",
     "    # Calculate standard deviation of the sampling distribution\n",
-    "    sample_std = sigma / N\n",
+    "    sample_std = sigma / np.sqrt(N)\n",
     "    \n",
     "    # Calculate z-score from population mean (mu), sample mean and sample std\n",
     "    z = (sample_mean - mu) / sample_std\n",
@@ -189,24 +183,13 @@
     }
    },
    "source": [
-    "## Break\n",
-    "\n",
-    "Lets have 10 minutes break\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
     "## Activity: t-test\n",
     "\n",
-    "The average British man is 175.3 cm tall. A survey recorded the heights of 10 British men. Calculate the t-score from formula and use available function in `stats.ttest_1samp`. Compare what you will get\n",
+    "The average British man is 175.3 cm tall. A survey recorded the heights of 10 British men when these ten men drink spceciall type of Milk for 2 years. Calculate the t-score from formula and use available function in `stats.ttest_1samp`. Compare what you will get\n",
     "\n",
-    "`x = [177.3, 182.7, 169.6, 176.3, 180.3, 179.4, 178.5, 177.2, 181.8, 176.5]`"
+    "`x = [177.3, 182.7, 169.6, 176.3, 180.3, 179.4, 178.5, 177.2, 181.8, 176.5]`\n",
+    "\n",
+    "we want to know whether the mean of the sample is different from the population mean"
    ]
   },
   {
@@ -239,15 +222,23 @@
     "# Calculate the standard deviation of sample distribution\n",
     "\n",
     "N = len(x) # number of data samples\n",
-    "SE = np.array(x).std(ddof=1) /np.sqrt(N)\n",
+    "S = np.array(x).std(ddof=1)\n",
+    "den = S /np.sqrt(N)\n",
     "\n",
     "# t-test from formula\n",
-    "t = (sample_mean - mu)/SE\n",
+    "t = (sample_mean - mu)/den\n",
     "print(\"t-statistic: \",t)\n",
     "\n",
     "# one sample t-test that gives you the p-value too can be done with scipy as follows:\n",
     "t, p = stats.ttest_1samp(x, mu)\n",
     "print(\"t = \", t, \", p = \", p)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## So, we conclude that Milk has effect on the heights"
    ]
   },
   {
