add image for null hypothesis

--- a/Notebooks/HypothesisTesting.ipynb
+++ b/Notebooks/HypothesisTesting.ipynb
@@ -37,7 +37,7 @@
     "## Null hypothesis examples\n",
     "\n",
     "\n",
-    "1- Raindance, cultures people dance together to have rain during periods of drought <img src=\"raindance.jpg\">\n",
+    "1- Raindance, cultures people dance together to have rain during periods of drought <img src=\"Images/raindance.jpg\">\n",
     "\n",
     "2- We want to test a drug has impact on brain \n",
     "\n",
