--- a/Notebooks/HypothesisTesting.ipynb
+++ b/Notebooks/HypothesisTesting.ipynb
@@ -6,15 +6,15 @@
    "source": [
     "## Learning Objectives\n",
     "\n",
-    "By the end of this lesson, students will be able to:\n",
+    "By the end of this lesson, you will be able to:\n",
     "\n",
-    "1- Describe null hypothesis and when and how apply Null Hypothesis\n",
+    "1- Describe null hypothesis and when and how to apply it\n",
     "\n",
-    "2- What are the metrics we need in order to statistically accept or reject null\n",
+    "2- Define the metrics we need in order to statistically accept or reject null\n",
     "\n",
-    "3- How and when use Z test or T test\n",
+    "3- Understand how and when to use Z test or T test\n",
     "\n",
-    "4- Whether or not two groups are different"
+    "4- Distinguish whether or not two groups are different"
    ]
   },
   {
@@ -23,7 +23,7 @@
    "source": [
     "## What is null hypothesis?\n",
     "\n",
-    "It is the formal methods of reaching conclusions based on population statistics and sample data where we apply changes to population"
+    "It is the formal method of reaching conclusions based on population statistics and sample data where we apply changes to a population"
    ]
   },
   {
@@ -37,13 +37,15 @@
     "## Null hypothesis examples\n",
     "\n",
     "\n",
-    "1- Raindance, cultures people dance together to have rain during periods of drought <img src=\"Images/raindance.jpg\">\n",
+    "1- Rain dance, cultures people dance together to have rain during periods of drought \n",
     "\n",
-    "2- We want to test a drug has impact on brain \n",
+    "<img src=\"Images/raindance.jpg\" height=\"200px\">\n",
     "\n",
-    "3- Does a food boost IQ?\n",
+    "2- We want to test if a drug has an impact on the brain \n",
     "\n",
-    "4- A/B test\n"
+    "3- Does a food boost your IQ?\n",
+    "\n",
+    "4- A/B testing\n"
    ]
   },
   {
@@ -54,11 +56,11 @@
     }
    },
    "source": [
-    "## Review of Z distribution, CDF and SF\n",
+    "## Activity: Review of Z distribution, CDF and SF\n",
     "\n",
-    "Activity: Generate 10000 sample as a random variable with Normal distribution with pre-define mean and standard deviation.\n",
+    "Generate 10000 samples as a random variable with Normal distribution with a pre-defined mean and standard deviation.\n",
     "\n",
-    "Hint = `import numpy as np`\n",
+    "**Hint:** `import numpy as np`\n",
     "\n",
     "        `mean  = 60`\n",
     "        \n",
@@ -66,11 +68,11 @@
     "\n",
     "       X = np.random.normal(mean, sigma, 10000)\n",
     "\n",
-    "Write a code to show that $Z = \\frac{X - mean}{sigma}$, is standard Normal\n",
+    "Write a function to show that $Z = \\frac{X - mean}{sigma}$, is standard Normal\n",
     "\n",
-    "Hint: If subtract each element of above generated number from the mean and divide over std (sigma), then the new array would be a Normal distribution with zero mean, std 1 \n",
+    "**Hint:** If you subtract each element of the above generated number from the mean, and divide over std (sigma), then the new array would be a Normal distribution with zero mean, std 1 \n",
     "\n",
-    "Hint: Plot histogram of Z, show Z is standard normal"
+    "**Hint:** Plot the histogram of Z, show that Z is standard normal"
    ]
   },
   {
@@ -82,6 +84,8 @@
    },
    "source": [
     "## Null hypothesis drug example on rat\n",
+    "\n",
+    "[Slides for example](https://docs.google.com/presentation/d/1BQibGlrpX71JU0jBU0C7zJJr6S_4WQeFzO7PBmnxf8g/edit?usp=sharing)\n",
     "\n",
     "A neurologist is testing the effect of a drug on response time by injecting 100 rats with a unit dose of a drug, subjecting each to neurologist stimulus and recording its response time. The neurologist knows that the mean response time for rats not injected with the drug is 1.2 seconds. The mean of the 100 injected rats's response time is 1.05 seconds with population standard deviation of 0.5 seconds. Do you think the drug has effect on response time?"
    ]
@@ -132,31 +136,22 @@
    "source": [
     "## Activity: z-test\n",
     "\n",
-    "Write a function the takes the mean of population, significant level and the samples as the input argument \n",
+    "Write a function that takes the mean, significant level, and samples of the population as the input arguments.\n",
     "\n",
-    "then decide to reject ot accept the null hypothesis for drug effect on rat\n",
+    "This function should then decide to reject ot accept the null hypothesis for the drug effect on rats\n",
     "\n",
     "Recall: $\\mu = 1.2$, $\\bar{x} = 1.05$, $N = 100$ and $\\sigma = 0.5$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-2-bd856d4b1bfc>, line 6)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-bd856d4b1bfc>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    z = (sample_mean - mu) / sample_std\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def accept_or_reject_null_hypothesis(mu, sample_mean, significant_level, N, sigma):\n",
     "    # Calculate standard deviation of the sampling distribution\n",
@@ -185,11 +180,13 @@
    "source": [
     "## Activity: t-test\n",
     "\n",
-    "The average British man is 175.3 cm tall. A survey recorded the heights of 10 British men when these ten men drink spceciall type of Milk for 2 years. Calculate the t-score from formula and use available function in `stats.ttest_1samp`. Compare what you will get\n",
+    "The average British man is 175.3 cm tall. A survey recorded the heights of 10 British men who drank a special type of Milk for 2 years.\n",
+    "\n",
+    "Calculate the t-score from the previous formula and use the available function in [`stats.ttest_1samp`](https://docs.scipy.org/doc/scipy/reference/generated/scipy.stats.ttest_1samp.html). Compare what you will get with `x` as your input:\n",
     "\n",
     "`x = [177.3, 182.7, 169.6, 176.3, 180.3, 179.4, 178.5, 177.2, 181.8, 176.5]`\n",
     "\n",
-    "we want to know whether the mean of the sample is different from the population mean"
+    "We want to know whether the mean of the sample is different from the population mean"
    ]
   },
   {
@@ -238,7 +235,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## So, we conclude that Milk has effect on the heights"
+    "## So, we conclude that Milk has an effect on the heights"
    ]
   },
   {
@@ -251,7 +248,9 @@
    "source": [
     "## Activity: z-test or t-test\n",
     "\n",
-    "Write a function that determine whether use z-test or t-test in order to accept or reject null hypothesis"
+    "Write a function that determines whether to use z-test or t-test in order to accept or reject null hypothesis\n",
+    "\n",
+    "**Hint:** Remember the the [slides](https://docs.google.com/presentation/d/1BQibGlrpX71JU0jBU0C7zJJr6S_4WQeFzO7PBmnxf8g/edit?usp=sharing) for the Rats..."
    ]
   },
   {
@@ -265,15 +264,18 @@
    "outputs": [],
    "source": [
     "def z_t_null_hypothesis(data_sample, mu, sigma, significant_level):\n",
+    "    # If sigma is known, calculate using the z-test\n",
     "    if sigma:\n",
     "        z_score = (np.mean(data_sample)-mu)/(sigma/np.sqrt(len(data_sample)))\n",
     "        p = scipy.stats.norm.sf(abs(z_score))*2\n",
+    "    # If the data_sample is greater than 30, calculate using the z-test\n",
     "    elif len(data_sample) > 30:\n",
     "        z_score = (np.mean(data_sample)-mu)/(np.std(data_sample)/np.sqrt(len(data_sample)))\n",
     "        p = scipy.stats.norm.sf(abs(z_score))*2\n",
+    "    # otherwise, calculate using the t-test\n",
     "    else:\n",
     "        t, p = stats.ttest_1samp(data_sample, mu)\n",
-    "    \n",
+    "\n",
     "    if p < significant_level:\n",
     "        print('reject null hypothesis')\n",
     "        \n",
@@ -289,9 +291,9 @@
     }
    },
    "source": [
-    "## What is one-tail or two-tail calculation for p-value?\n",
+    "## What is a one-tail or two-tail calculation for a p-value?\n",
     "\n",
-    "If the alternative hypothesis says the mean of sample is different from mean of population, we should compute p-value from two-tail. If it says the mean of sample is greater or lower than the mean of population we should compute one-tail"
+    "If the alternative hypothesis says the mean of a sample is different from the mean of the population, we should compute the p-value using two-tail. If it says the mean of a sample is greater or lower than the mean of a population, we should compute using one-tail"
    ]
   },
   {
@@ -302,19 +304,19 @@
     }
    },
    "source": [
-    "## Possible errors that can happen when accept or reject null hypothesis\n",
+    "## Possible errors that can happen when accepting or rejecting the null hypothesis\n",
     "\n",
-    "ype I error : We reject the null hypothesis when the null is true\n",
+    "**Type I error:** We reject the null hypothesis when the null is true\n",
     "\n",
     "$\\alpha$ = P(rejecting $H_o$  $|$  $H_o$ is true)\n",
     "\n",
-    "Type II error : We accept the null hypothesis when it is not true\n",
+    "**Type II error:** We accept the null hypothesis when it is not true\n",
     "\n",
     "$\\beta$ = P(accepting $H_o$ $|$ $H_o$ is false)\n",
     "\n",
-    "The drug has effect on brain\n",
+    "The drug has an effect on the brain\n",
     "\n",
-    "The drug has no effect on brain"
+    "The drug has no effect on the brain"
    ]
   },
   {
@@ -363,7 +365,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
